# iam-policy-autopilot

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TELEMETRY.md  install.sh  pyproject.toml
iam-policy-autopilot-access-denied/: Cargo.toml
iam-policy-autopilot-access-denied/src/: error.rs  types.rs
iam-policy-autopilot-access-denied/src/aws/: policy_naming.rs  principal.rs  sts.rs
iam-policy-autopilot-access-denied/src/parsing/: catalog.rs  utils.rs
iam-policy-autopilot-access-denied/src/synthesis/: policy_builder.rs
iam-policy-autopilot-cli/: Cargo.toml
iam-policy-autopilot-cli/src/: main.rs  types.rs
iam-policy-autopilot-cli/tests/: cli_args.rs  integration_tests.rs
iam-policy-autopilot-common/: Cargo.toml
iam-policy-autopilot-common/src/telemetry/: config.rs  mod.rs  span.rs
iam-policy-autopilot-common/tests/: telemetry_derive_test.rs  telemetry_doc_sync_test.rs
iam-policy-autopilot-mcp-server/: Cargo.toml
iam-policy-autopilot-mcp-server/src/: lib.rs  mcp.rs
iam-policy-autopilot-mcp-server/src/tools/: fix_access_denied.rs  generate_policy.rs  mod.rs
iam-policy-autopilot-mcp-server/tests/: mcp_server_integration_test.rs
iam-policy-autopilot-policy-generation/: Cargo.toml  build.rs
iam-policy-autopilot-policy-generation/resources/config/terraform/: names_data.hcl
iam-policy-autopilot-policy-generation/src/: embedded_data.rs  lib.rs  service_configuration.rs
iam-policy-autopilot-policy-generation/src/api/: common.rs  generate_policies.rs  mod.rs  model.rs
iam-policy-autopilot-policy-generation/src/enrichment/: engine.rs  mod.rs  operation_fas_map.rs  resource_matcher.rs  service_reference.rs
iam-policy-autopilot-policy-generation/src/enrichment/terraform/: mod.rs  resource_binder.rs  service_resolver.rs
iam-policy-autopilot-policy-generation/src/extraction/: engine.rs  extractor.rs  mod.rs  sdk_model.rs  service_hints.rs
iam-policy-autopilot-policy-generation/src/extraction/go/: disambiguation.rs  extractor.rs  features.rs  features_extractor.rs  mod.rs  node_kinds.rs  paginator_extractor.rs  waiter_extractor.rs
iam-policy-autopilot-policy-generation/src/extraction/javascript/: extractor.rs  scanner.rs  shared.rs
iam-policy-autopilot-policy-generation/src/extraction/python/: boto3_resources_model.rs  disambiguation.rs  disambiguation_tests.rs  extractor.rs  mod.rs  node_kinds.rs  paginator_extractor.rs  resource_direct_calls_extractor.rs  waiters_extractor.rs
iam-policy-autopilot-policy-generation/src/extraction/python/common/: argument_extractor.rs
iam-policy-autopilot-policy-generation/src/extraction/shared/: extraction_utils.rs  mod.rs
iam-policy-autopilot-policy-generation/src/extraction/terraform/: hcl_parser.rs  mod.rs  state_parser.rs  variable_resolver.rs
iam-policy-autopilot-policy-generation/src/extraction/typescript/: extractor.rs
iam-policy-autopilot-policy-generation/src/policy_generation/: engine.rs  merge.rs  mod.rs  utils.rs
iam-policy-autopilot-policy-generation/src/terraform/: parser.rs  terraform_resolver.rs
iam-policy-autopilot-policy-generation/tests/: terraform_integration.rs
iam-policy-autopilot-policy-generation/tests/resources/invalid_configs/: README.md  invalid_boto3_utilities_mapping1.json  invalid_boto3_utilities_mapping2.json  invalid_operation_fas_map1.json  invalid_operation_fas_map2.json  invalid_service_config1.json  invalid_service_config2.json
iam-policy-autopilot-policy-generation/tests/resources/terraform/basic_multi_resource/: app.py  expected_merged_policy.json  fixture.json
iam-policy-autopilot-policy-generation/tests/resources/terraform/expression_unresolvable/: app.py  expected_merged_policy.json  expected_policies.json  expected_with_explanations.json  fixture.json  main.tf
iam-policy-autopilot-policy-generation/tests/resources/terraform/mixed_concrete_and_expression/: app.py  expected_merged_policy.json  expected_policies.json  expected_with_explanations.json  fixture.json
iam-policy-autopilot-policy-generation/tests/resources/terraform/mixed_providers/: app.py  expected_merged_policy.json  expected_policies.json  expected_with_explanations.json  main.tf
iam-policy-autopilot-policy-generation/tests/resources/terraform/multi_file_resources/: app.py  compute.tf  expected_merged_policy.json  expected_policies.json  expected_with_explanations.json  fixture.json  storage.tf
iam-policy-autopilot-policy-generation/tests/resources/terraform/multi_service_real_world/: app.py  expected_merged_policy.json  expected_policies.json  expected_with_explanations.json  main.tf
iam-policy-autopilot-policy-generation/tests/resources/terraform/multiple_tfvars/: app.py  env.auto.tfvars  expected_merged_policy.json  expected_policies.json  expected_with_explanations.json  fixture.json  main.tf  prod.auto.tfvars  terraform.tfvars  variables.tf
iam-policy-autopilot-policy-generation/tests/resources/terraform/resource_arn_filtering/: expected_all_explanations.json  expected_no_explanations.json  expected_no_match_explanations.json  expected_s3_only_explanations.json  expected_s3_sqs_explanations.json  fixture.json
iam-policy-autopilot-policy-generation/tests/resources/terraform/state_precedence/: app.py  expected_merged_policy.json  expected_policies.json  fixture.json
iam-policy-autopilot-policy-generation/tests/resources/terraform/sub_resource_fallback/: app.py  expected_merged_policy.json  expected_policies.json  expected_with_explanations.json  fixture.json
iam-policy-autopilot-policy-generation/tests/resources/terraform/variable_resolution/: app.py  expected_merged_policy.json  expected_policies.json  expected_with_explanations.json  fixture.json  main.tf
iam-policy-autopilot-policy-generation/tests/resources/terraform_sample/: main.tf
iam-policy-autopilot-policy-generation/tests/resources/terraform_vars_sample/: variables.tf
iam-policy-autopilot-proc-macros/: Cargo.toml
iam-policy-autopilot-proc-macros/src/: lib.rs  telemetry.rs
iam-policy-autopilot-tools/: Cargo.toml
iam-policy-autopilot-tools/src/: lib.rs
(+29 files in other folders)
