[build-system]
requires = ["maturin>=1.10.2,<2.0"]
build-backend = "maturin"

# Standard Python package metadata
[project]
name = "iam-policy-autopilot" # The name it will have on PyPI
version = "0.1.3"
description = "An open source Model Context Protocol (MCP) server and command-line tool that helps your AI coding assistants quickly create baseline IAM policies that you can refine as your application evolves, so you can build faster. IAM Policy Autopilot analyzes your application code locally to generate identity-based policies for application roles, enabling faster IAM policy creation and reducing access troubleshooting time. IAM Policy Autopilot supports applications built in Python, Go, and TypeScript."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["rust", "IAM Policy", "AWS"]

[tool.maturin]
manifest-path = "iam-policy-autopilot-cli/Cargo.toml"
bindings = "bin"
