[package]
name = "iam-policy-autopilot-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for IAM Policy Autopilot workspace crates"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
iam-policy-autopilot-proc-macros = { path = "../iam-policy-autopilot-proc-macros" }

# AWS SigV4 signing for authenticated Lambda Function URL
aws-config.workspace = true
aws-sigv4 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-smithy-runtime-api = "1"
http = "1"

[dev-dependencies]
serial_test.workspace = true
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
