[package]
name = "iam-policy-autopilot-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for IAM Policy Autopilot workspace crates"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
reqwest.workspace = true
tokio.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
iam-policy-autopilot-proc-macros = { path = "../iam-policy-autopilot-proc-macros" }

# SHA256 payload hashing for CloudFront OAC (x-amz-content-sha256 header)
sha2.workspace = true

[dev-dependencies]
serial_test.workspace = true
rstest.workspace = true
regex.workspace = true
walkdir.workspace = true
wiremock = "0.6"
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
