[package]
name = "iam-policy-autopilot-policy-generation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for IAM permission analysis and AWS SDK method extraction"

[lib]
crate-type = ["cdylib", "rlib"]

# Universal dependencies (all compilation targets)
[dependencies]
serde.workspace = true
thiserror.workspace = true
log.workspace = true
regex.workspace = true
ast-grep-config.workspace = true
ast-grep-core.workspace = true
ast-grep-language.workspace = true
anyhow.workspace = true
convert_case.workspace = true
reqwest.workspace = true
rust-embed.workspace = true
schemars.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
strsim.workspace = true
derive-new.workspace = true


# Build dependencies
[build-dependencies]
serde.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
tokio-util.workspace = true

# JSON processing
serde_json.workspace = true

aws-lc-rs.workspace = true
git2.workspace = true
relative-path.workspace = true

[features]
default = []
integ-test = []
# Development features
dev = ["tokio/test-util"]

# Development dependencies
[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true
test-log = "0.2"
env_logger.workspace = true
wiremock = "0.6"
iam-policy-autopilot-policy-generation = { path = ".", features = ["integ-test"]}

# Documentation configuration
[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true