[package]
name = "iam-policy-autopilot-proc-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro crate for IAM Policy Autopilot"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
